--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ classifiers = [
 docker = "^5.0.3"
 python = "^3.8"
 rich = "^11.2.0"
+pydantic = "^1.9.0"
 
 [tool.poetry.dev-dependencies]
 coverage = {extras = ["toml"], version = "^6.3.2"}
