--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,8 +18,8 @@ repos:
     pass_filenames: false
 
 # Type check code with MyPy.
-- repo: https://github.com/pre-commit/mirrors-mypy
-  rev: 'v0.931'
-  hooks:
-  - id: mypy
-    additional_dependencies: [types-click, types-pkg-resources, types-PyYAML]
+# - repo: https://github.com/pre-commit/mirrors-mypy
+#   rev: 'v0.931'
+#   hooks:
+#   - id: mypy
+#     additional_dependencies: [types-click, types-pkg-resources, types-PyYAML]
