--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,9 +21,10 @@ classifiers = [
 
 [tool.poetry.dependencies]
 docker = "^5.0.3"
+pydantic = "^1.9.0"
 python = "^3.8"
 rich = "^11.2.0"
-pydantic = "^1.9.0"
+roslibpy = "^1.3.0"
 
 [tool.poetry.dev-dependencies]
 coverage = {extras = ["toml"], version = "^6.3.2"}
