Listing external dependency 'roslibpy' as not PEP 561 compliant.

--- a/mypy.ini
+++ b/mypy.ini
@@ -21,3 +21,7 @@ warn_unused_ignores = True
 ; Package 'docker' is not compliant with PEP 561.
 [mypy-docker]
 ignore_missing_imports = True
+
+; Package 'roslibpy' is not compliant with PEP 561.
+[mypy-roslibpy]
+ignore_missing_imports = True
