Moved simulations package from rigel as it may also be used within plugins.

--- a/mypy.ini
+++ b/mypy.ini
@@ -25,3 +25,10 @@ ignore_missing_imports = True
 ; Package 'roslibpy' is not compliant with PEP 561.
 [mypy-roslibpy]
 ignore_missing_imports = True
+
+; Package 'hpl' is not compliant with PEP 561.
+[mypy-hpl.parser]
+ignore_missing_imports = True
+
+[mypy-hpl.visitor]
+ignore_missing_imports = True
