--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,19 +7,19 @@ repos:
   - id: flake8
     additional_dependencies: [flake8-bugbear]
 
-# Run unit tests with Pytest.
-- repo: local
-  hooks:
-  - id: tests
-    name: tests
-    entry: poetry run pytest
-    language: system
-    types: [python]
-    pass_filenames: false
-
-# Type check code with MyPy.
-# - repo: https://github.com/pre-commit/mirrors-mypy
-#   rev: 'v0.931'
+# # Run unit tests with Pytest.
+# - repo: local
 #   hooks:
-#   - id: mypy
-#     additional_dependencies: [types-click, types-pkg-resources, types-PyYAML]
+#   - id: tests
+#     name: tests
+#     entry: poetry run pytest
+#     language: system
+#     types: [python]
+#     pass_filenames: false
+
+# # Type check code with MyPy.
+# # - repo: https://github.com/pre-commit/mirrors-mypy
+# #   rev: 'v0.931'
+# #   hooks:
+# #   - id: mypy
+# #     additional_dependencies: [types-click, types-pkg-resources, types-PyYAML]
