--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,10 +21,10 @@ classifiers = [
 
 [tool.poetry.dependencies]
 docker = "^5.0.3"
-hpl-specs = {git = "git@gitlab.inesctec.pt:pedro.m.melo/hpl.git"}
 pydantic = "^1.9.0"
 python = "^3.8"
 rich = "^11.2.0"
+rigel-hpl = "^0.1.0"
 roslibpy = "^1.3.0"
 
 [tool.poetry.dev-dependencies]
