--- a/mypy.ini
+++ b/mypy.ini
@@ -27,8 +27,5 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 ; Package 'hpl' is not compliant with PEP 561.
-[mypy-hpl.parser]
-ignore_missing_imports = True
-
-[mypy-hpl.visitor]
+[mypy-hpl.*]
 ignore_missing_imports = True
