--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,8 @@ classifiers = [
 
 [tool.poetry.dependencies]
 pydantic = "^1.9.0"
-python-on-whales = "^0.49.0"
 python = "^3.8"
+python-on-whales = {git = "https://github.com/gabrieldemarmiesse/python-on-whales.git"}
 rich = "^11.2.0"
 rigel-hpl = "^0.1.0"
 roslibpy = "^1.3.0"
